manifests/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "mysql-deployment"
  labels:
    select: snap-report-backend-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snap-report-backend-mysql
  template:
    metadata:
      name: prod
      labels:
          region: in
          prod: frontend
    spec: 
      containers:
      - name: snap-report-backend-mysql
        image: mysql:5.7
        resources:
          requests:
            cpu: "100m"
