manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: snap-report-backend
 namespace: snap-report
spec:
 selector:
   # Selector for Pods
   app: snap-report-backend-app
 ports:
   # Port Map
  - name: http
    port: 9090
    targetPort: 9090
    protocol: TCP
 type: NodePort
