manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: snap-report-backend
  name: snap-report-backend
  namespace: snap-report
spec:
  ingressClassName: nginx
  rules:
  - host: reports-api.snap-ci.ovh
    http:
      paths:
      - backend:
          service:
            name: snap-report-backend
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - reports-api.snap-ci.ovh
    secretName: reports-api.snap-ci.ovh-tls
